--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile 'org.xutils:xutils:3.3.36'
     compile files('libs/gson-2.7.jar')
     compile 'com.jakewharton:butterknife:5.1.1'
+    compile 'com.jude:rollviewpager:1.2.9'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.artemzin.assert-parcelable:assert-parcelable:1.0.1'
     compile project(':IMkit')
 }
