--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "24.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.example.administrator.myapp"
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.artemzin.assert-parcelable:assert-parcelable:1.0.1'
     compile project(':IMkit')
+    compile 'com.jude:rollviewpager:1.2.9'
 }
