--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,13 @@
         <activity
             android:name=".MainActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".CollectActivity"
@@ -47,21 +49,21 @@
         <activity android:name=".EditInfoActivity" />
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" >
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            </activity>
+        </activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".ToBeRentor" />
         <activity android:name=".FriendinfoActivity" />
         <activity android:name=".AllDynamicActivity" />
         <activity android:name=".ConversationActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data
@@ -70,11 +72,16 @@
                     android:scheme="rong" />
             </intent-filter>
         </activity>
-        <activity android:name=".HaoyouActivity"></activity>
-        <activity android:name=".PersonDongtaiActivity"></activity>
-        <activity android:name=".SenddongtaiActivity"></activity>
-        <activity android:name=".YingyueActivity"></activity>
-<activity android:name=".SousuoActivity"></activity>
+        <activity android:name=".HaoyouActivity" />
+        <activity android:name=".PersonDongtaiActivity" />
+        <activity android:name=".SenddongtaiActivity" />
+        <activity android:name=".YingyueActivity" />
+        <activity android:name=".SousuoActivity" />
+        <activity android:name=".xiangqingActivity" />
+        <activity android:name=".ReleaseActivity" />
+        <activity android:name=".HouseInfoActivity" />
+        <activity android:name=".UserInfoActivity"></activity>
+        <activity android:name=".PictureActivity"></activity>
     </application>
 
 </manifest>
